# lab4

./: .gitignore  DSCI560_Lab4_Report.html  DSCI560_Lab4_Report.md  README.md  backtester.py  config.yaml  config_ema.yaml  config_index.yaml  config_momentum.yaml  data_loader.py  pyproject.toml  ticker.yaml
Strategy/: __init__.py  ema_cross.py  index_hold.py  momentum.py  momentum_rebalance.py  stoch.py  stock_selector.py  strategy.py
data/: ABT.csv  ADBE.csv  ADP.csv  AES.csv  AKAM.csv  ALB.csv  AMAT.csv  AMCR.csv  AME.csv  AMGN.csv  AMZN.csv  ANET.csv  AVB.csv  BALL.csv  BBY.csv  BDX.csv  BF-B.csv  BK.csv  BKR.csv  BMY.csv  BRK-B.csv  BRO.csv  C.csv  CAT.csv  CB.csv  CBOE.csv  CCI.csv  CEG.csv  CFG.csv  CHD.csv  CHRW.csv  CI.csv  CL.csv  CMCSA.csv  CMS.csv  CNC.csv  COIN.csv  COR.csv  COST.csv  CSX.csv  (+137 more)
data/index/: GSPC.csv  SPY.csv
data/stock/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  APP.csv  (+461 more)
result/EMA_AAPL_10Y/: config.yaml  equity_curve.csv  summary.yaml
result/IndexHold_10Y/: config.yaml  equity_curve.csv  report.html  summary.yaml
result/MomentumRebalance_10Y/: config.yaml  equity_curve.csv  report.html  summary.yaml
result/ema_NVDA/: account.csv  config.yaml  order_fills.csv  positions.csv  report.html
